--- a/em_logimpex/views/eml_expedientes.xml
+++ b/em_logimpex/views/eml_expedientes.xml
@@ -208,16 +208,56 @@
     <record id="expedientes_view_gantt" model="ir.ui.view">
         <field name="name">eml.expedientes.gantt</field>
         <field name="model">eml.expedientes</field>
+        <field name="priority">10</field>
         <field name="arch" type="xml">
-            <gantt date_start="start_date" date_stop="end_date" default_group_by='partner_id'>
+            <gantt date_start="start_date"
+                   date_stop="end_date"
+                   color="id"
+                   default_scale="month"
+                   thumbnails="{'responsable_id': 'avatar_128'}"
+                   default_group_by="name"
+                   display_unavailability="1" >
+                <templates>
+                    <div t-name="gantt-popover">
+                        <div t-if="responsable_id"><strong>Responsable — </strong> <t t-out="responsable_id"/></div>
+                        <div t-if="partner_id"><strong>Cliente — </strong> <t t-esc="partner_id[1]"/></div>
+                        <div><t t-esc="userTimezoneStartDate.format('l LT ')"/><i class="fa fa-long-arrow-right" title="Arrow"/><t t-esc="userTimezoneStopDate.format(' l LT')"/></div>
+<!--                        <div class="text-danger mt-2" t-if="planning_overlap">-->
+<!--                            <t t-esc="planning_overlap"/> other task<span t-if="planning_overlap &gt; 1">s</span> for this employee at the same time.-->
+<!--                        </div>-->
+                    </div>
+                </templates>
+                <field name="responsable_id"/>
+                <field name="partner_id"/>
+<!--                <field name="planning_overlap"/>-->
             </gantt>
         </field>
     </record>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <record id="action_eml_expedientes" model="ir.actions.act_window">
         <field name="name">Expedientes</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">eml.expedientes</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,gantt</field>
         <field name="context">{}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
